--- a/src/components/Navigation/components/CartItems/CartItems.css
+++ b/src/components/Navigation/components/CartItems/CartItems.css
@@ -33,3 +33,10 @@
   font-size: 2.2rem;
   margin-bottom: auto;
 }
+@media (max-width: 593px) {
+  .item-name,
+  .item-price,
+  .delete {
+    font-size: 1.4rem;
+  }
+}
