--- a/src/components/Navigation/containers/CartContainer/CartContainer.css
+++ b/src/components/Navigation/containers/CartContainer/CartContainer.css
@@ -1,14 +1,16 @@
 .Cart-Navigation {
   height: 100vh;
   background-color: #010a12;
-  width: 40%;
-  min-width: 29rem;
+  width: 70%;
+  max-width: 50rem;
+  min-width: 30rem;
   position: fixed;
   right: 0;
   top: 0;
   z-index: 7;
   overflow-y: scroll;
   border: 0.2rem solid var(--white);
+  border-bottom: 0;
   transform: translateX(100%);
   transition: 0.3s transform;
 }
