--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,8 @@ body::-webkit-scrollbar-thumb {
 }
 .product__overview--left {
 }
+@media (max-width: 593px) {
+  .heading-primary {
+    font-size: 2.8rem;
+  }
+}
