--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -82,9 +82,9 @@
   height: 2.9rem;
   width: 3.6rem;
 }
-.toaster {
+/* .toaster {
   background-color: #010a12;
   color: var(--primary-color);
   font-family: var(--secondary-font);
   border: 0.2rem solid var(--white);
-}
+} */
