--- a/src/Pages/Checkout/Checkout.css
+++ b/src/Pages/Checkout/Checkout.css
@@ -58,6 +58,7 @@
   padding: 0.8rem;
   border-radius: 0.3rem;
   font-family: inherit;
+  color: #000;
   display: flex;
   cursor: pointer;
   font-size: 1.8rem;
@@ -101,6 +102,7 @@
   font-size: 1.8rem;
   font-family: inherit;
   padding: 0.8rem;
+  color: #000;
   background-color: var(--primary-color);
   border-radius: 0.3rem;
   cursor: pointer;
@@ -132,7 +134,7 @@
 }
 @media (max-width: 593px) {
   .checkout-form {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
   }
 
   .input-groups {
