--- a/src/components/Navigation/containers/CartContainer/CartContainer.css
+++ b/src/components/Navigation/containers/CartContainer/CartContainer.css
@@ -56,6 +56,7 @@
   background-color: var(--primary-color);
   padding: 1.2rem 2rem;
   font-family: inherit;
+  color: #010a12;
   font-size: 2rem;
   margin-bottom: 1rem;
   cursor: pointer;
