--- a/src/Pages/Home/containers/Events/Components/EventCardSkelenton/EventCardSkelenton.css
+++ b/src/Pages/Home/containers/Events/Components/EventCardSkelenton/EventCardSkelenton.css
@@ -41,7 +41,7 @@
     background-color: #01080d;
   }
   100% {
-    backgroung-color: #999;
+    background-color: #999;
   }
 }
 
@@ -50,6 +50,6 @@
     background-color: #444;
   }
   100% {
-    backgroung-color: #888;
+    background-color: #888;
   }
 }
