--- a/src/Pages/Home/components/Skelenton/Skelenton.css
+++ b/src/Pages/Home/components/Skelenton/Skelenton.css
@@ -37,7 +37,7 @@
   }
 
   100% {
-    backgroung-color: #222324;
+    background-color: #222324;
   }
 }
 @keyframes skelentonTextAnimation {
@@ -46,6 +46,6 @@
   }
 
   100% {
-    backgroung-color: #222324;
+    background-color: #222324;
   }
 }
