New: skelenton preloader tweaks

--- a/src/Pages/Home/components/Skelenton/Skelenton.css
+++ b/src/Pages/Home/components/Skelenton/Skelenton.css
@@ -2,7 +2,7 @@
   width: 100%;
   background-color: transparent;
   opacity: 0.7;
-  min-height: 48rem;
+  height: 48rem;
   border: 0.2rem solid #fff;
 }
 .img-box-conc {
@@ -11,41 +11,35 @@
 }
 .img-conc {
   display: block;
-  padding: 1.2rem;
   height: 40rem;
   width: 100%;
-  animation: skelentonTextAnimation 1s linear infinite alternate;
+  background-position: 100% 0;
+  background-image: linear-gradient(
+    90deg,
+    #fff 0,
+    rgba(229 229 229/ 90%) 4rem,
+    #ccc 8rem
+  );
+  background-size: 300%;
+  animation: wavy-loading 1.5s linear infinite alternate;
 }
 .text-box > p {
   height: 2rem;
   width: 60%;
   display: block;
-  animation: skelentonTextAnimation 1.5s linear infinite alternate;
+  background-position: 100% 0;
+  background-image: linear-gradient(
+    90deg,
+    #fff 0,
+    rgba(229 229 229/ 90%) 4rem,
+    #ccc 8rem
+  );
+  background-size: 300%;
+  animation: wavy-loading 1.5s linear infinite alternate;
 }
 
-@keyframes skel-loading {
-  0% {
-    background-color: #222;
-  }
-  100% {
-    background-color: #061019;
-  }
-}
-@keyframes skelentonContentAnimation {
-  0% {
-    background-color: #032644;
-  }
-
-  100% {
-    background-color: #222324;
-  }
-}
-@keyframes skelentonTextAnimation {
-  0% {
-    background-color: rgb(68, 65, 65);
-  }
-
-  100% {
-    background-color: #222324;
+@keyframes wavy-loading {
+  to {
+    background-position: -100% 0%;
   }
 }
